# hdee

./: README.md  pyproject.toml
configs/hdee_3_iterations/eval/: dataset_all_trained_domains.yaml  directory.yaml  eval_ensemble_mhe_iho_iter3.yaml  eval_ensemble_mho_ihe_iter3.yaml  eval_ensemble_mho_iho_iter3.yaml
configs/hdee_3_iterations/train_domains/: dataset_Caselaw_Access_Project.yaml  dataset_History_and_events.yaml  dataset_Human_activites.yaml  dataset_Philosophy_and_thinking.yaml  dataset_TinyStories.yaml  dataset_cs_l1.yaml  dataset_math_l1.yaml  dataset_physics_l1.yaml  dataset_simple_wikipedia_LM.yaml  directory.yaml  train_domain_hyperparam_lr6e5.yaml  train_iter1_expert_l_domain_math_l1.yaml  train_iter1_expert_m_domain_Caselaw_Access_Project.yaml  train_iter1_expert_m_domain_History_and_events.yaml  train_iter1_expert_m_domain_math_l1.yaml  train_iter1_expert_s_domain_Caselaw_Access_Project.yaml  train_iter2_MHC_expert_l_domain_physics_l1.yaml  train_iter2_MHC_expert_m_domain_Human_activites.yaml  train_iter2_MHC_expert_m_domain_physics_l1.yaml  train_iter2_MHC_expert_m_domain_simple_wikipedia_LM.yaml  train_iter2_MHC_expert_s_domain_simple_wikipedia_LM.yaml  train_iter3_MHC_PHS_expert_l_domain_cs_l1.yaml  train_iter3_MHC_PHS_expert_m_domain_Philosophy_and_thinking.yaml  train_iter3_MHC_PHS_expert_m_domain_TinyStories.yaml  train_iter3_MHC_PHS_expert_m_domain_cs_l1.yaml  train_iter3_MHC_PHS_expert_s_domain_TinyStories.yaml
configs/hdee_seed_models/: train_seed_expert_l.yaml  train_seed_expert_m.yaml  train_seed_expert_s.yaml  train_seed_hyperparam_small_close_experts.yaml
scripts/: eval_ensembles.sh  load_openwebtext.sh  load_single_M2D2_domain_dataset.sh  load_trained_M2D2_domains.sh  load_trained_other_domains.sh  train_domain_experts.sh  train_seed_models.sh
src/gensyn_dataprep/dataprep/: pretokenize_data.py  shuffle_parquet.py
src/hdee/: btm_utils.py  data_loaders.py  eval.py  eval_ensemble.py  llama.py  schedulers.py  train.py  train_domain.py  weight_strategies.py
